recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:5: error: ';' expected but ',' found.
    case _ => current(steps) , avance(length) , droite(angle) , tree(steps-1,length*shrink,angle,shrink) , gauche(2*angle), tree(steps-1,length*shrink,angle,shrink) , recule(length) , droite(angle)
                             ^